%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  serializedVersion: 2
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: WPN_RepeaterPistol_Controller
  m_AnimatorParameters:
  - m_Name: bFire
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bReload
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bClear
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: fWeaponMode
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: fReloadSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bSwitchWeapon
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 1107256808796973022}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1107 &1107256808796973022
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 1102469201832056244}
  m_States:
  - {fileID: 1102814753609994988}
  - {fileID: 1102392560393731334}
  - {fileID: 1102469201832056244}
  - {fileID: 1102904695344787045}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
  - first: {fileID: 1102814753609994988}
    second:
    - {fileID: 1101954775167723140}
  - first: {fileID: 1102392560393731334}
    second:
    - {fileID: 1101172159123082831}
  - first: {fileID: 1102469201832056244}
    second:
    - {fileID: 1101326076377734022}
  - first: {fileID: 1102904695344787045}
    second: []
  - first: {fileID: 0}
    second:
    - {fileID: 1101075843942832801}
    - {fileID: 1101268016886873153}
    - {fileID: 1101281640019423978}
  m_MotionSetCount: 0
  m_AnyStatePosition: {x: 0, y: -250, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1102 &1102814753609994988
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Fire
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: e3a50568d92af95428e19ee91c5d711c, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 0, y: 0, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101954775167723140
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102469201832056244}
  m_TransitionDuration: 0.05177493
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent:
    m_EventTreshold: 0
    m_ExitTime: 0.98
  - m_ConditionMode: 2
    m_ConditionEvent: bFire
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1102 &1102392560393731334
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Reload
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 206637685987578821}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 250, y: 0, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag:
--- !u!206 &206637685987578821
BlendTree:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: BlendTree
  m_Childs:
  - m_Motion: {fileID: 7400000, guid: e0243d7178671e9449e5bb4cf65e4c29, type: 2}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 0
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: e0243d7178671e9449e5bb4cf65e4c29, type: 2}
    m_Threshold: 3
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 0
    m_Mirror: 0
  m_BlendParameter: fReloadSpeed
  m_BlendParameterY:
  m_MinThreshold: 1
  m_MaxThreshold: 3
  m_UseAutomaticThresholds: 0
  m_BlendType: 0
--- !u!1101 &1101172159123082831
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102469201832056244}
  m_TransitionDuration: 0.032770615
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent:
    m_EventTreshold: 0
    m_ExitTime: 0.98
  - m_ConditionMode: 2
    m_ConditionEvent: bFire
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1102 &1102469201832056244
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 523230905385f9d46ab9005a12260165, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 0, y: 250, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101326076377734022
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102904695344787045}
  m_TransitionDuration: 0.5857965
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bSwitchWeapon
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1102 &1102904695344787045
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: SwitchDown
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 867186cbf29b0dc46834616f2279913e, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 250, y: 250, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101075843942832801
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102392560393731334}
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bReload
    m_EventTreshold: 0
    m_ExitTime: 0
  - m_ConditionMode: 2
    m_ConditionEvent: bClear
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &1101268016886873153
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102814753609994988}
  m_TransitionDuration: 0.06490777
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bFire
    m_EventTreshold: 0
    m_ExitTime: 0
  - m_ConditionMode: 2
    m_ConditionEvent: bClear
    m_EventTreshold: 0
    m_ExitTime: 0
  - m_ConditionMode: 2
    m_ConditionEvent: bReload
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &1101281640019423978
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102469201832056244}
  m_TransitionDuration: 0.01468846
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bClear
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
